[package]
name = "pb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27.0", features = ["full"] }
anyhow = { version = "1.0.70", features = ["backtrace"] }
futures = "0.3.28"
async-tungstenite = { version = "0.20.0", features = ["tokio-native-tls"] }
url = { version = "2.3.1", features = ["serde"] }
dotenvy = "0.15.7"
rand = "0.8.5"
tokio-native-tls = "0.3.1"
serde = { version = "1.0.159", features = ["derive"] }
lazy_static = "1.4.0"
image = { version = "0.24.6", features = ["avif"] }
rayon = "1.7.0"
pretty_env_logger = "0.4.0"
log = "0.4.17"
serde_json = "1.0.95"
